# lazers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: test.yml
boot/: README.md
boot/uefi-loader/: Cargo.toml
boot/uefi-loader/src/: elf.rs  jump_to_kernel.main.asm  main.rs
docs/: README.md  cleanup-requried.md  index.md
docs/.vitepress/: config.mts
docs/adr/: 0001-repository-structure.md  0002-uefi-x86_64-boot-path.md  0003-user-mode-bring-up.md  0004-disk-backed-user-programs.md  README.md
docs/architecture/: README.md  boot-process.md  filesystem-layout.md  index.md  memory-management.md  repository-structure.md  runtime-model.md  scheduler-and-process-services.md  storage-and-loading.md  system-vision.md  text-runtime.md  user-kernel-interface.md
kernel/: README.md
kernel/kernel/: Cargo.toml  linker.ld
kernel/kernel/src/: arch.asm  arch.rs  console.rs  enter_user_mode.arch.asm  env.rs  font.rs  inb.keyboard.asm  inl.pci.asm  io.rs  keyboard.rs  lib.rs  load_idt.arch.asm  load_page_table.arch.asm  macros.rs  main.asm  main.rs  memory.rs  memory_test.rs  outb.port_io.asm  outl.pci.asm  outw.port_io.asm  pci.rs  port_io.rs  power.rs  process.rs  read_cr2.arch.asm  scheduler.rs  serial.rs  storage.rs  syscall.rs  terminal.rs  thread.rs
kernel/kernel/src/memory/: allocator.rs  kernel.rs  loader.rs  mod.rs  paging.rs  state.rs  types.rs  user.rs  util.rs
kernel/kernel/src/scheduler/: bootstrap.rs  core.rs  mod.asm  mod.rs  services.rs  state.rs
kernel/kernel/src/storage/: ahci.rs  fat32.rs  gpt.rs  mod.rs  path.rs  rootfs.rs  util.rs
kernel/lazers-kernel/: Cargo.toml  build.rs
kernel/lazers-kernel/src/: arch.rs  console.rs  font.rs  io.rs  keyboard.rs  macros.rs  main.rs  memory.rs  process.rs  scheduler.rs  (+4 more)
libs/: README.md
libs/boot-info/: Cargo.toml
libs/elf/: Cargo.toml
libs/kernel-abi/: Cargo.toml
libs/lazers-elf/: Cargo.toml
libs/liblazer/: Cargo.toml
libs/lzutil/: Cargo.toml
tools/: README.md
tools/scripts/: build-image.sh  common.sh  patch_gpt_esp.py  patch_gpt_layout.py  qemu-common.sh  run-qemu-headless.sh  run-qemu-selftest.sh  run-qemu.sh  user-packages.sh
user/: README.md
user/cat/: Cargo.toml
user/echo/: Cargo.toml
user/lash/: Cargo.toml
user/lazers-user-echo/: Cargo.toml  linker.ld
user/ls/: Cargo.toml
user/pwd/: Cargo.toml
user/selftest/: Cargo.toml
(+30 files in other folders)
