[workspace]
resolver = "2"
members = [
    "boot/uefi-loader",
    "kernel/kernel",
    "libs/boot-info",
    "libs/elf",
    "user/echo",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
boot-info = { path = "libs/boot-info" }
elf = { path = "libs/elf" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
