[workspace]
resolver = "2"
members = [
    "boot/uefi-loader",
    "kernel/kernel",
    "libs/boot-info",
    "libs/elf",
    "libs/kernel-abi",
    "libs/liblazer",
    "libs/lzutil",
    "user/cat",
    "user/echo",
    "user/lash",
    "user/ls",
    "user/pwd",
    "user/selftest",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
boot-info = { path = "libs/boot-info" }
elf = { path = "libs/elf" }
kernel-abi = { path = "libs/kernel-abi" }
liblazer = { path = "libs/liblazer" }
lzutil = { path = "libs/lzutil" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
