[package]
name = "uefi-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
boot-info.workspace = true
elf.workspace = true
lzutil.workspace = true
uefi = { version = "0.35.0", features = ["alloc", "global_allocator", "logger", "panic_handler"] }
