[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
boot-info.workspace = true
elf.workspace = true
kernel-abi.workspace = true
lzutil.workspace = true

[build-dependencies]

[[bin]]
name = "kernel"
path = "src/main.rs"
